--- a/pom.xml
+++ b/pom.xml
@@ -482,7 +482,7 @@
       <repositories>
         <repository>
           <id>mapr-releases</id>
-          <url>http://repository.mapr.com/maven/</url>
+          <url>https://repository.mapr.com/maven/</url>
           <snapshots><enabled>false</enabled></snapshots>
           <releases><enabled>true</enabled></releases>
         </repository>
